# Rust_Chip_8

./: .gitignore  CHIP8_VARIANTS.md  Cargo.toml  DISP_WAIT_DEBUG_NOTES.md  GUIDE.md  IMPLEMENTATION_COMPARISON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_RESULTS.md
Specification/: CHIP-8_Specification.md  Opcodes.md
roms/: Pong_Commented.md  README.md
src/: cpu.rs  display.rs  keyboard.rs  lib.rs  main.rs  memory.rs  sound.rs
tests/: integration_tests.rs
