[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"
description = "A CHIP-8 emulator written in Rust"

[dependencies]
minifb = "0.27"    # Window/buffer management
rand = "0.8"       # Random number generation for Cxkk opcode
rodio = "0.19"     # Audio playback for sound timer

[dev-dependencies]
# Test utilities if needed later
